# ChatSphere

./: .env  Cargo.toml  diesel.toml
migrations/2024-08-16-080400_user/: up.sql
migrations/2024-08-16-081557_conversation/: up.sql
migrations/2024-08-16-081603_message/: up.sql
src/: main.rs  schema.rs  template.rs
src/controllers/: users.rs
src/db_connections/: db.rs
src/models/: users.rs
templates/: register.html
