[package]
name = "chatsphere"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres","r2d2","chrono"] }
dotenvy = "0.15"
actix-web = "4"  
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
askama = "0.12"
bcrypt = "0.15.1"
chrono = "0.4" 